Upgrade java to 11